get articles and get blogs routes (without pagination)
