# storage/api-docs/api-docs.json
@@ -5,6 +5,20 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/articles": {
+            "get": {
+                "tags": [
+                    "Articles"
+                ],
+                "summary": "Article index",
+                "operationId": "11aa4cc6561a7b94c56d1201d62513ee",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/api/articles/{id}": {
             "get": {
                 "tags": [
@@ -25,6 +39,20 @@
                     },
                     "404": {
                         "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/api/blogs": {
+            "get": {
+                "tags": [
+                    "Blogs"
+                ],
+                "summary": "Blog index",
+                "operationId": "9819e5802278e060898795fe3c919599",
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
